--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -516,6 +516,16 @@ section.my-research .section-heading {
     padding: 50px 01px 20px 01px;
 }
 
+.list-container {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.list-item {
+    margin: 5px 0;
+}
+
+
 .isotope-wrapper {
     position: relative;
     width: 100%;
