--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -579,7 +579,12 @@ section.my-research .section-heading {
     border-bottom: 2px solid rgba(250,250,250,0.1);
     padding-bottom: 10px;
     margin-bottom: 10px;
+    /* display: none; */
 }
+
+/* .isotope-item {
+    display: none;
+  } */
 
 .isotope-item img {
     top: 0;
