--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -289,9 +289,9 @@ html {
     right: 10%;
     left: 35%;
     position: relative;
-    margin-bottom: 10px; /* Instead of padding-bottom to avoid affecting the inside of the div */
+/*    margin-bottom: 10px; /* Instead of padding-bottom to avoid affecting the inside of the div */
     text-align: center; /* This replaces the obsolete <center> tag */
-    padding-top: 10px; /* Adds 10px of padding above the widget */
+/*    padding-top: 10px; /* Adds 10px of padding above the widget */
 }
 
 .section {
